<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_largexxx"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_bored_white"
            android:drawablePadding="5dp"
            android:hint="@string/username"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/gray_darkx"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="7dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_bored_white"
            android:drawablePadding="5dp"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/password"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/gray_darkx"
            android:layout_marginTop="@dimen/margin_smallX"
            android:inputType="textPassword|numberPassword"
            android:paddingLeft="7dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <Button
            android:layout_width="match_parent"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:background="@drawable/bg_bored_white"
            android:textColor="@color/black"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/largeX"
            />
        <Button
            android:layout_width="match_parent"
            android:text="@string/register"
            android:id="@+id/btnRegister"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_blue_hover"
            android:textColor="@color/white"
            android:layout_height="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"

            android:gravity="center">
            <com.example.admin.ebuy.view.EBCustomFont
                android:id="@+id/btnForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_big"
                android:gravity="center"
                android:text="@string/forgetpassword"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>