<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_largexxx"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/size_200"
            android:layout_height="@dimen/size_50"
            android:src="@drawable/name_logo"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/size_50"
            />
        <EditText
            android:id="@+id/txtUserName"
            android:layout_marginTop="@dimen/margin_smallX"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_bored_white"
            android:drawablePadding="5dp"
            android:hint="@string/username"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/gray_darkx"
            android:inputType="textEmailAddress"
            android:paddingLeft="7dp"
            android:textColor="@color/edit_color"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/txtPhonenumber"
            android:layout_marginTop="@dimen/margin_smallX"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_bored_white"
            android:drawablePadding="5dp"
            android:hint="@string/phone_number"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/gray_darkx"
            android:inputType="text"
            android:paddingLeft="7dp"
            android:textColor="@color/edit_color"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/txtPassword"
            android:layout_marginTop="@dimen/margin_smallX"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_bored_white"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/gray_darkx"
            android:inputType="text"
            android:paddingLeft="7dp"
            android:textColor="@color/edit_color"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_marginTop="@dimen/margin_smallX"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_bored_white"
            android:drawablePadding="5dp"
            android:hint="@string/confirmpassword"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/gray_darkx"
            android:inputType="text"
            android:paddingLeft="7dp"
            android:textColor="@color/edit_color"
            android:textSize="14sp" />

        <Button
            android:layout_width="match_parent"
            android:text="@string/register"
            android:id="@+id/btnRegister"
            android:background="@drawable/button_blue_hover"
            android:textColor="@color/white"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/largeX"
            />
        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:id="@+id/btnRegister"-->
            <!--android:text="@string/login"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="@drawable/button_blue_hover"-->
            <!--android:textColor="@color/white"-->
            <!--android:layout_height="35dp" />-->

    </LinearLayout>

</RelativeLayout>