<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/gray_light">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_100"
                android:layout_marginTop="@dimen/smallestX"
                android:background="@color/white"
                >
                <ImageView
                    android:id="@+id/imageProduct"
                    android:layout_width="@dimen/size_80"
                    android:layout_height="@dimen/size_80"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:src="@drawable/logo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/smallestX">
                <EditText
                    android:id="@+id/edtNameProdcut"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:textColorHint="@color/gray_darkx"
                    android:typeface="normal"
                    android:hint="@string/name_product"
                    android:background="@color/white"
                    android:drawablePadding="5dp"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="7dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/smallestX">
                <EditText
                    android:id="@+id/edtDescribe"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:hint="@string/describe"
                    android:textColorHint="@color/gray_darkx"
                    android:typeface="normal"
                    android:background="@color/white"
                    android:drawablePadding="5dp"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="7dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/btnListProduct"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/margin_small">
                <com.example.admin.ebuy.view.EBCustomFont
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:background="@color/white"
                    android:text="@string/list"
                    android:gravity="center_vertical"
                    android:textColor="@color/gray_darkx"
                    android:inputType="text"
                    android:textStyle="normal"
                    android:paddingLeft="7dp" />
                <com.example.admin.ebuy.view.EBCustomFont
                    android:id="@+id/txtTypeProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_40"
                    android:gravity="center_vertical"
                    android:text="@string/list"
                    android:textColor="@color/gray_darkx"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/margin_small">
                <EditText
                    android:id="@+id/edtTrade"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:hint="@string/trademark"
                    android:textColorHint="@color/gray_darkx"
                    android:typeface="normal"
                    android:background="@color/white"
                    android:drawablePadding="5dp"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="7dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/smallestX">
                <EditText
                    android:id="@+id/edtMaterial"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:hint="@string/material"
                    android:background="@color/white"
                    android:textColorHint="@color/gray_darkx"
                    android:typeface="normal"
                    android:drawablePadding="5dp"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="7dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/margin_small">
                <EditText
                    android:id="@+id/edtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:hint="@string/price"
                    android:background="@color/white"
                    android:textColorHint="@color/gray_darkx"
                    android:typeface="normal"
                    android:drawablePadding="5dp"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="7dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/smallestX">
                <EditText
                    android:id="@+id/edtCount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:hint="@string/quantity"
                    android:background="@color/white"
                    android:textColorHint="@color/gray_darkx"
                    android:typeface="normal"
                    android:drawablePadding="5dp"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="7dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/margin_small">
                <EditText
                    android:id="@+id/edtWeight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:hint="@string/weight"
                    android:background="@color/white"
                    android:textColorHint="@color/gray_darkx"
                    android:typeface="normal"
                    android:drawablePadding="5dp"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="7dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/smallestX">
                <EditText
                    android:id="@+id/edtStatus"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:textColorHint="@color/gray_darkx"
                    android:typeface="normal"
                    android:hint="@string/status"
                    android:background="@color/white"
                    android:drawablePadding="5dp"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="7dp"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>